modules/networking/nat-gateway.tf
resource "aws_nat_gateway" "this" {
  vpc_id            = aws_vpc.this.id
  availability_mode = "regional"

  tags = {
    Name = "${local.name_prefix}"
  }

  depends_on = [aws_internet_gateway.this]
}
