modules/networking/vpc.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr_block

  tags = {
    Name = "${local.name_prefix}"
  }
}
